# opc_client

./: Cargo.toml  README.md  build.rs  config.json  log4rs.yaml
pki/own/: cert.der
pki/private/: private.pem
src/: main.rs  message.proto
src/clients/: mod.rs  opcua_client.rs  ws_client.rs
src/config/: configuration.rs
src/system_initializer/: consumer.rs  data_queue.rs  mod.rs  producer.rs  tags_synchronizer.rs
